productMods/css/scholars-vis/keywordcloud/kwcloud.css
 .choices {
    background-color: rgba(50, 50, 50, 0.8);
    color: #DDDDDD;
    font-family: Arial;
    cursor: pointer;
    font-size: 12px;
 }
 .triangle-isosceles {
  max-height: 250px;
  max-width: 600px;
  overflow-y:scroll;
  overflow:auto;
  position:relative;
  padding:15px;
  margin:1em 0 3em;
  -webkit-border-radius:10px;
  -moz-border-radius:10px;
  border-radius:10px;
}
 .kwhoverable {
    width:100%;
 }
 .kwhoverable a {
    color:white;
    text-decoration: none;
 }
 .kwhoverable:hover {
    background-color:rgba(50, 150, 200, 0.8);
 }
 .d3-tip {
     z-index: 4;
 }

